updated title to

--- a/factfinder/index.html
+++ b/factfinder/index.html
@@ -2,7 +2,7 @@
   <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>CSS Grid!</title>
+    <title>Fact Finder</title>
     <link id="styles" rel="stylesheet" href="style.css">  
   </head>
   
